# app/models/device_token.rb
@@ -1,0 +1,6 @@
+class DeviceToken < ApplicationRecord
+  include TokenAuthenticatable
+  token_prefix "esd_"
+
+  belongs_to :device
+end
